--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/logo.jpg
 links:
   - title: About
-    url: https://www.andersonpri.moe.edu.sg/principal-s-message-for-2025/
+    url: /principal-s-message-for-2025/
     sublinks:
       - title: Principal's Message
         url: https://www.andersonpri.moe.edu.sg/principal-s-message-for-2025/
