--- a/_co-curriculum-activities/collection.yml
+++ b/_co-curriculum-activities/collection.yml
@@ -5,7 +5,7 @@ collections:
       - Visual and Performing Arts/Visual Voices (Art Club).md
       - Visual and Performing Arts/.keep
       - Visual and Performing Arts/Angklung & Kulintang Ensemble.md
-      - Visual and Performing Arts/Brass Band.md
+      - Visual and Performing Arts/Brass Band & Percussion.md
       - Visual and Performing Arts/Dance Ensemble.md
       - Visual and Performing Arts/Guitar Ensemble.md
       - Visual and Performing Arts/Guzheng Ensemble.md
