--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -2,6 +2,7 @@ collections:
   about:
     output: true
     order:
+      - 25th Silver Jubilee Celebration.md
       - Principal's Message/Principal's Message for 2025.md
       - Principal's Message/.keep
       - Our Directional Statements.md
