{"message":"Update file: navigation.yml","userId":"677","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,20 +3,22 @@ links:
   - title: About
     url: /principal-s-message-for-2025/
     sublinks:
+      - title: Silver Jubilee Celebration
+        url: /25th-silver-jubilee-celebration/
       - title: Principal's Message
         url: https://www.andersonpri.moe.edu.sg/principal-s-message-for-2025/
       - title: Our Directional Statements
         url: /about/our-directional-statements/
       - title: School History
         url: /about/school-history
+      - title: School Publications
+        url: /about/school-publication/encompass/
       - title: School Song
         url: /about/school-song
       - title: School Rules
         url: /about/school-rules
       - title: School Crest
         url: /about/school-crest
-      - title: School Publications
-        url: /about/school-publication/encompass/
   - title: Staff
     url: /key-personnel/school-executive-committee
     sublinks:
