{"message":"Update file: collection.yml","userId":"677","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - English/.keep
-      - English/Vision & Mission.md
+      - English/Aims & Approach.md
       - English/Key Programmes.md
       - English/Useful Links.md
       - Chinese/.keep
