--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - 25th Silver Jubilee Celebration.md
+      - Principal's Message/Principal's Message for 2026.md
       - Principal's Message/Principal's Message for 2025.md
       - Principal's Message/.keep
       - Our Directional Statements.md
