--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -2,6 +2,7 @@ collections:
   about:
     output: true
     order:
+      - School Corporate Videos.md
       - 25th Silver Jubilee Celebration.md
       - Principal's Message/.keep
       - Principal's Message/Principal's Message for 2026.md
