{"message":"Update file: collection.yml","userId":"677","fileName":"collection.yml"}

--- a/_connect/collection.yml
+++ b/_connect/collection.yml
@@ -2,6 +2,7 @@ collections:
   connect:
     output: true
     order:
+      - Home–School Partnerships.md
       - Contact & Admin Info.md
       - Service Providers/.keep
       - Service Providers/School Bookshop.md
