--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -59,6 +59,8 @@ links:
     sublinks:
       - title: Contact & Admin Info
         url: /connect/contact-n-admin-info
+      - title: Home-School Partnerships
+        url: /home-school-partnerships/
       - title: Service Providers
         url: /connect/service-providers/school-student-care
       - title: Admission
