{"message":"Update file: navigation.yml","userId":"677","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 logo: /images/logo.jpg
 links:
   - title: About
-    url: /principal-s-message-for-2025/
+    url: https://andersonpri.gov.sg/principal-s-message-for-2026/
     sublinks:
       - title: Silver Jubilee Celebration
         url: /25th-silver-jubilee-celebration/
       - title: Principal's Message
-        url: https://www.andersonpri.moe.edu.sg/principal-s-message-for-2026/
+        url: https://andersonpri.gov.sg/principal-s-message-for-2026/
       - title: Our Directional Statements
         url: /about/our-directional-statements/
       - title: School History
