--- a/_about/collection.yml
+++ b/_about/collection.yml
@@ -2,7 +2,7 @@ collections:
   about:
     output: true
     order:
-      - 25th Silver Jubilee Celebration.md
+      - 25ᵗʰ Silver Jubilee Celebration.md
       - Principal's Message/.keep
       - Principal's Message/Principal's Message for 2026.md
       - Our Directional Statements.md
