--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,7 +31,7 @@ links:
   - title: Curriculum
     collection: curriculum
   - title: Parents
-    url: /parents/letters-to-parents
+    url: /parents/resources-for-parents/road-safety/
     sublinks:
       - title: Resources for Parents
         url: /parents/resources-for-parents/road-safety
@@ -56,7 +56,7 @@ links:
       - title: Contact & Admin Info
         url: /connect/contact-n-admin-info
       - title: Home-School Partnerships
-        url: /connect/home-school-partnerships/
+        url: https://www.andersonpri.moe.edu.sg/home-school-partnerships//
       - title: Service Providers
         url: /connect/service-providers/school-student-care
       - title: Admission
