{"message":"Update file: navigation.yml","userId":"677","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/logo.jpg
 links:
   - title: About
-    url: https://andersonpri.gov.sg/principal-s-message-for-2026/
+    url: /principal-s-message-for-2026/
     sublinks:
       - title: Silver Jubilee Celebration
         url: /25th-silver-jubilee-celebration/
