{"message":"Update file: navigation.yml","userId":"677","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ links:
         url: /about/our-directional-statements/
       - title: School History
         url: /about/school-history
-      - title: School Publications
-        url: /about/school-publication/encompass/
+      - title: School Corporate Videos
+        url: /school-corporate-videos/
       - title: School Song
         url: /about/school-song
       - title: School Rules
