{"message":"Update file: navigation.yml","userId":"677","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -56,7 +56,7 @@ links:
       - title: Contact & Admin Info
         url: /connect/contact-n-admin-info
       - title: Home-School Partnerships
-        url: https://www.andersonpri.moe.edu.sg/home-school-partnerships//
+        url: /home-school-partnerships/
       - title: Service Providers
         url: /connect/service-providers/school-student-care
       - title: Admission
