{"message":"Update file: collection.yml","userId":"677","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -34,7 +34,7 @@ collections:
       - InfoComm Technology/Key Programmes.md
       - InfoComm Technology/Useful Links.md
       - CCE/.keep
-      - CCE/Our Mission in CCE.md
+      - CCE/Character Education.md
       - CCE/Student Leadership.md
       - CCE/Our Programmes.md
       - CCE/Sexuality Education 2026.md
