--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -37,7 +37,7 @@ collections:
       - CCE/Character Education.md
       - CCE/Student Leadership.md
       - CCE/Our Programmes.md
-      - CCE/Sexuality Education 2026.md
+      - CCE/MOE Sexuality Education.md
       - Physical Education/.keep
       - Physical Education/Vision & Mission.md
       - Physical Education/Key Programmes.md
