{"message":"Update file: collection.yml","userId":"677","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -36,7 +36,7 @@ collections:
       - CCE/.keep
       - CCE/Character Education.md
       - CCE/Student Leadership.md
-      - CCE/Our Programmes.md
+      - CCE/Citizenship Education.md
       - CCE/MOE Sexuality Education.md
       - Physical Education/.keep
       - Physical Education/Vision & Mission.md
