{"message":"Update file: collection.yml","userId":"677","fileName":"collection.yml"}

--- a/_departments/collection.yml
+++ b/_departments/collection.yml
@@ -2,6 +2,7 @@ collections:
   departments:
     output: true
     order:
+      - Talent Development Department.md
       - English/.keep
       - English/Aims & Approach.md
       - English/Key Programmes.md
