--- a/_co-curriculum-activities/collection.yml
+++ b/_co-curriculum-activities/collection.yml
@@ -2,6 +2,7 @@ collections:
   co-curriculum-activities:
     output: true
     order:
+      - Visual and Performing Arts/Guitar Ensemble.md
       - Visual and Performing Arts/Visual Voices (Art Club).md
       - Visual and Performing Arts/.keep
       - Visual and Performing Arts/Angklung & Kulintang Ensemble.md
